# esp32_wifi_ble

./: README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  esp32_wifi_control_main.c  esp32_wifi_control_main.h  gatts_demo.c  gatts_demo.h  index.html
